@@ -3,17 +3,11 @@ package pli;
 import model.DataSet;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import utils.BitSetUtils;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.Arrays;
 import java.util.BitSet;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-
 /**
  * @author Hoshi
  * @version 1.0
@@ -38,24 +32,23 @@ public class PLICacheTest {
     @BeforeEach
     void setup() {
         testDataSet = createTestDataSet();
-        PLICache.clear();
     }
 
     @Test
     void testSingleColumnPLI() {
-        PLICache cache = PLICache.getInstance(testDataSet);
+        PLICache cache = new PLICache(testDataSet);
 
         // 验证年龄列的PLI（应有3行25岁）
         BitSet ageCol = new BitSet();
         ageCol.set(1);
         PLI agePLI = cache.getOrCalculatePLI(ageCol);
         assertEquals(1, agePLI.getClusterCount()); // 预期一个等价类{0,1,3}
-        assertTrue(agePLI.getEquivalenceClasses().get(0).containsAll(List.of(0, 1, 3)));
+        assertTrue(agePLI.getEquivalenceClasses().getFirst().containsAll(List.of(0, 1, 3)));
     }
 
     @Test
     void testIntersectionWithResult() {
-        PLICache cache = PLICache.getInstance(testDataSet);
+        PLICache cache = new PLICache(testDataSet);
 
         // 构建两个PLI
         BitSet ageCol = new BitSet();
@@ -71,6 +64,6 @@ public class PLICacheTest {
 
         // 验证结果（年龄25 + 北京 → 行0,1）
         assertEquals(1, intersectPLI.getClusterCount());
-        assertTrue(intersectPLI.getEquivalenceClasses().get(0).containsAll(List.of(0, 1)));
+        assertTrue(intersectPLI.getEquivalenceClasses().getFirst().containsAll(List.of(0, 1)));
     }
 }
